fix from master (css gap vs flex)

--- a/src/Admin/files/style/scss/partials/_index.scss
+++ b/src/Admin/files/style/scss/partials/_index.scss
@@ -13,6 +13,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  gap: 1em;
 
   p {
     width: 13em;
@@ -124,14 +125,15 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  gap: 1em;
 
   .box {
     padding: 10px;
     border: 1px solid var(--index-box-border);
     border-radius: 3px;
     min-height: 200px;
-    margin: 10px;
     text-align: left;
+    margin: 0; // No necessary as we have gap on flex parent
   }
 }
 
@@ -143,6 +145,7 @@
   flex-wrap: wrap;
   justify-content: center;
   flex: 1 1 auto;
+  gap: 1em;
 
   ul {
     display: block;
